<?xml version="1.0"?>
<package format="3">
  <name>interactive_marker_tutorials</name>
  <version>0.10.3</version>
  <description>The interactive_marker_tutorials package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/interactive_marker_tutorials</url>

  <author >David Gossow</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>
</package>